--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <div class="about" >
                 <h1>About me</h1>
                 <p class ="p2">I like building cool stuffs. I build desktop programs, funtionality for webs and full webs.</p>
-                <p class ="p2">I work mainly with Java/C++ for Windows o Linux and JS for webs. This is a list of the technologies I've worked:</p>
-                <p class ="p2">Java C/C++  Haskell Python </p>
-                <p class ="p2">JS HTML/CSS React MySql</p>
+                <p class ="p2">I work mainly with Java for Windows o Linux and JS for webs. This is a list of the technologies I've worked:</p>
+                <p class ="p2"><b>Java</b> C/C++  Haskell Python </p>
+                <p class ="p2"><b>JS</b> HTML/CSS React MySql</p>
                 <p class ="p2"> GIT & bitbucket SCRUM </p>
-                <p class ="p2"> Also I write courses and articles of technology.</p>
+                <p class ="p2"> Also I can write courses and articles of technology.</p>
                 <p class ="p2">Need build something ? Send me a email or find me on social media.</p>
             </div>
         </div>
