--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <a href="work1.html" class="imgCell">
                     <p class="titulo"> Inventary </p>
                     <img src="Files/work4.png" alt="Portfolio proyect image" class="cellImg">
-                    <p class="descripcion" >A inventary web application developed in React. </p>
+                    <p class="descripcion" >A inventory web application developed in React. </p>
                     <p class="leng">JS, JSX, React .</p>
                 </a>
                 <a href="work1.html" class="imgCell">
