--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     script src="script.js"></script -->
 </head>
 <body onload="loadProyects()">
-  <div class="container">
+  <div class="container" >
     <!-- Para landing -->
     <div class="row">
         
@@ -83,8 +83,8 @@
     </div>
 
     <!-- Para la lista de proyectos -->
-    <div class="row">
-        <div class="col-12 col-md-12 pageContainer" id="portfolio">
+    <div class="row" id="portfolio">
+ <!--        <div class="col-12 col-md-12 pageContainer" >
             <div class="portfolio-item-card-shadow">
                 <div class="card portfolio-item-card">
                     <div class="row">
@@ -124,12 +124,12 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </div>
 
 
     <!-- Para Contact -->
-    <div class="row">
+    <div class="row"  style="background-image: url('https://uploads-ssl.webflow.com/600739a0619d0ec723fc4bbc/601307553856b3255792c584_request_demo-left.svg');">
     
         <div class="col-12 col-md-8 pageContainer"  id="contact"> 
             <div class="mailContainer">
