menu y funcionalidad de seleccion de imagenes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     script src="script.js"></script -->
 </head>
 <body onload="loadProyects()">
+
+    <div class="menu-bar">
+        <div class="row">
+            <div class="col-12 col-md-2 btn-menu-active">
+                <a href="#home">Home</a> </div>
+            <div class="col-12 col-md-2 btn-menu"><a href="#about">About</a></div>
+            <div class="col-12 col-md-2 btn-menu"><a href="#portfolio">PortFolio</a></div>
+            <div class="col-12 col-md-2 btn-menu"><a href="#contact">Contact</a></div>
+            <div class="col-12 col-md-2 btn-menu"></div>
+            <div class="col-12 col-md-2 btn-menu"></div>
+        </div>
+    </div>
   <div class="container" >
     <!-- Para landing -->
     <div class="row">
@@ -84,6 +96,7 @@
 
     <!-- Para la lista de proyectos -->
     <div class="row" id="portfolio">
+        <span class="text-span-colored-green-1" style="font-size: 50px">Portfolio</span>
  <!--        <div class="col-12 col-md-12 pageContainer" >
             <div class="portfolio-item-card-shadow">
                 <div class="card portfolio-item-card">
