--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
 
     <div class="menu-bar">
         <div class="row">
-            <div class="col-12 col-md-2 btn-menu-active">
-                <a href="#home">Home</a> </div>
-            <div class="col-12 col-md-2 btn-menu"><a href="#about">About</a></div>
-            <div class="col-12 col-md-2 btn-menu"><a href="#portfolio">PortFolio</a></div>
-            <div class="col-12 col-md-2 btn-menu"><a href="#contact">Contact</a></div>
+            <div class="col-12 col-md-2 btn-menu-active" id="homeMenuBarLink">
+                <a href="#home" onclick="selectMenuOption('homeMenuBarLink','btn-menu')">Home</a> </div>
+            <div class="col-12 col-md-2 btn-menu" id="aboutMenuBarLink">
+                <a href="#about" onclick="selectMenuOption('aboutMenuBarLink','btn-menu')">About</a>
+            </div>
+            <div class="col-12 col-md-2 btn-menu" id="portfolioMenuBarLink">
+                <a href="#portfolio" onclick="selectMenuOption('portfolioMenuBarLink','btn-menu')">PortFolio</a>
+            </div>
+            <div class="col-12 col-md-2 btn-menu" id="contactMenuBarLink">
+                <a href="#contact" onclick="selectMenuOption('contactMenuBarLink','btn-menu')">Contact</a>
+            </div>
             <div class="col-12 col-md-2 btn-menu"></div>
             <div class="col-12 col-md-2 btn-menu"></div>
         </div>
@@ -97,47 +103,6 @@
     <!-- Para la lista de proyectos -->
     <div class="row" id="portfolio">
         <span class="text-span-colored-green-1" style="font-size: 50px">Portfolio</span>
- <!--        <div class="col-12 col-md-12 pageContainer" >
-            <div class="portfolio-item-card-shadow">
-                <div class="card portfolio-item-card">
-                    <div class="row">
-                        <div class="col-12" style="text-align: center;margin-bottom: 35px;">
-                            <span class="text-span-colored-blue" style="font-size: 50px;">WONDER</span>
-                        </div>
-                        <div class="col-7">
-                            <span class="portfolio-item-card-preview">
-                                <span class="portfolio-item-card-img-container">
-                                    <img src="Files/wonder-1.png" alt="" class="" loading="lazy" >
-                                </span>
-                                <span class="portfolio-item-card-img-selector">
-                                    <span class="portfolio-item-card-list">
-                                        <button class="portfolio-item-card-list-option">1</button>
-                                        <button class="portfolio-item-card-list-option">2</button>
-                                        <button class="portfolio-item-card-list-option active">3</button>
-                                        <button class="portfolio-item-card-list-option">4</button>
-                                    </span>
-                                </span>
-                            </span>
-
-                        </div>
-                        <div class="col-5" style="border-left: 2px solid #e5e5e5;">
-                            <h3>Wonder</h3>
-                            <span style="min-height: 16vh;">
-                                <p class="portfolio-item-card-p-link">
-                                    <a class="" href="http://wonderhamburgueseria.com.ar/nuevacordoba/pedidos/" target="_blank" >http://wonderhamburgueseria.com.ar/nuevacordoba/pedidos/1pedidos/2pedidos/3pedidos/4pedidos/</a>
-                                </p>
-                                <p>Sistema de gestión y registro de venta, impresión de comanda dinámica</p>
-                            </span>
-
-                            <p class="date-text">Creado y mantenido desde <span class="date">2020-08-05</span></p>
-                            
-                            <b>PHP, Jquery, Bootstrap, MySql</b>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div> -->
     </div>
 
 
@@ -159,8 +124,5 @@
     </div>
   </div>
 
- 
- 
-     <!--  <script src="js/bootstrap.min.js"></script>             -->
 </body>
 </html>
