Agregado de stats

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span  style="color: #f7f7f7;margin-left: 0;">ge</span>
                     <span  style="color: #ffe500;margin-left: 0;">n</span>
                     <span  style="color: #f7f7f7;margin-left: 0;">ti</span>
-                    <span  style="color: #70a7d8;margin-left: 0;">ne</span>
+                    <span  style="color: #70a7d8;margin-left: 0;">na</span>
                 </div>
                 <a class="profile-description-list-elem">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"> <path d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/></svg>
@@ -177,6 +177,32 @@
 
                     <br>
 
+                    <div class="profile-card" style="padding: 8% 4%;border-color: #74ffc857;margin-bottom: 8em;">
+                        <div>
+                            <div style="display: flex;align-items: flex-end;justify-content: space-between;">
+                                <h3 style="font-size: 40px;color: #91f7d2;">Resume</h3>
+                                <div style="margin-bottom:.5rem;color: #19baab;">Updated to <span style="color: #dedede;">10/06 update</span> </div>
+                            </div>
+                            <div style="display: flex;">
+                               <div style="width: 15%;color: #eca708;">4.5 Años</div> 
+                               <div style="display: flex;flex-direction:column;">
+                                   <div class="p2"> 1 year. Private company, multiple projects: Java, Spring-boot mainly. </div> 
+                                   <div class="p2" style="border-top: 1px solid #0f0f168c;margin-top: 5px;"> 3.5 years. Freelance.  Completed projects: PHP + JQuery + Angular </div> 
+                                   <div class="p2" style="border-top: 1px solid #0f0f168c;margin-top: 5px;">+ Own projects (+8): PHP + Java + Angular (front-end), Some React </div>
+                               </div> 
+                            </div>
+                            <div style="display: flex;flex-direction:column;">
+                                <h3 style="font-size: 40px;color: #91f7d2;text-align: start;width: 100%;margin-top: 14px;padding-top: 5px;border-top: 2px solid #0f0f168c;">Years</h3>
+                                <div style="display: flex;flex-direction:column;align-items: flex-start;margin-left: 20%;">
+                                    <div class="p2"> <b>Java, Spring-boot :</b> 3 </div>
+                                    <div class="p2"> <b>PHP :</b> 4 </div>
+                                    <div class="p2"> <b>JQuery :</b> 4 </div>
+                                    <div class="p2"> <b>Angular :</b> 4 </div>
+                                    <div class="p2"> <b>React :</b> 1 </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
 					
