--- a/index_es.html
+++ b/index_es.html
@@ -170,6 +170,34 @@
                     <p class ="p2" style="color:#8896ff"> <b>GIT </b> <span style="color:#383838">|</span> bitbucket  <span style="color:#383838">|</span> SCRUM </p>
                     <br>
 
+
+                    <div class="profile-card" style="padding: 8% 4%;border-color: #74ffc857;margin-bottom: 8em;">
+                        <div>
+                            <div style="display: flex;align-items: flex-end;justify-content: space-between;">
+                                <h3 style="font-size: 40px;color: #91f7d2;">Resume</h3>
+                                <div style="margin-bottom:.5rem;color: #19baab;">Actualizado al <span style="color: #dedede;">10/06</span> </div>
+                            </div>
+                            <div style="display: flex;">
+                               <div style="width: 15%;color: #eca708;">4.5 Años</div> 
+                               <div style="display: flex;flex-direction:column;">
+                                   <div class="p2"> 1 año. Empresa, multiples proyectos: Java, Spring-boot principalmente. </div> 
+                                   <div class="p2" style="border-top: 1px solid #0f0f168c;margin-top: 5px;"> 3.5 años forma Freelance proyectos completos  PHP + JQuery + Angular</div> 
+                                   <div class="p2" style="border-top: 1px solid #0f0f168c;margin-top: 5px;">+ Proyectos propios (+8) (PHP + Java +  Angular (front-principal), Algo de React)</div>
+                               </div> 
+                            </div>
+                            <div style="display: flex;flex-direction:column;">
+                                <h3 style="font-size: 40px;color: #91f7d2;text-align: start;width: 100%;margin-top: 14px;padding-top: 5px;border-top: 2px solid #0f0f168c;">Años</h3>
+                                <div style="display: flex;flex-direction:column;align-items: flex-start;margin-left: 20%;">
+                                    <div class="p2"> <b>Java, Spring-boot :</b> 3 </div>
+                                    <div class="p2"> <b>PHP :</b> 4 </div>
+                                    <div class="p2"> <b>JQuery :</b> 4 </div>
+                                    <div class="p2"> <b>Angular :</b> 4 </div>
+                                    <div class="p2"> <b>React :</b> 1 </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <p class="p2">¿Necesitas crear algo? Contactame por las redes sociales o enviame un correo.</p>
                     <button class="mailButton">
                        <a href="mailto:brian89.chacon89@gmail.com?Subject=Mail%20De%20Mi%20Web%20FEEDBACK" class="mailLink">ESCRIBE ME</a>
