Agregado de stats

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="profile-titles">
                <h3>Full-stack developer </h3>
                <h1 class="text-span-colored-green-2">Brian A. Chacón</h1>
-               <h2>Always building stuffs 🏗⚡🚀🔺  🏗</h2>
+               <h2>Always building stuffs</h2>
+               <h2> 🏗⚡🚀🔺  🏗 </h2>
             </div>     
 
             <div class="profile-description">
@@ -114,7 +115,7 @@
     			<h3 class="text-span-colored-green-2">Projects</h3>
     			<a href="https://klommerce.com.ar/">Ideas Chacon Web</a>
     			<p> 
-    				List of most relevant projects done
+    				List of most relevant projects
 				</p>
 				<div class="arrow-body">
 					<div class="center-con">
