--- a/index_es.html
+++ b/index_es.html
@@ -37,7 +37,8 @@
             <div class="profile-titles">
                <h3>Desarrollador Full-stack</h3>
                <h1 class="text-span-colored-green-2">Brian A. Chacón</h1>
-               <h2>Always building stuffs 🏗⚡🚀🔺  🏗</h2>
+               <h2>Always building stuffs</h2>
+               <h2> 🏗⚡🚀🔺  🏗 </h2>
             </div>     
 
             <div class="profile-description">
